(enhancement) fixed issues of long file name get overflowed and UI messy displays

--- a/src/app/components/upload-file-page/upload-file-page.component.scss
+++ b/src/app/components/upload-file-page/upload-file-page.component.scss
@@ -1,79 +1,96 @@
-.container {
-    padding: 2rem;
-    text-align: center;
-    border: dashed 1px #979797;
-    position: relative;
-    margin: 0 auto;
-  
-    input {
-      opacity: 0;
-      position: absolute;
-      z-index: 2;
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-    }
-  
-    label {
-      color: white;
-      width: 183px;
-      height: 10px;
-      border-radius: 21.5px;
-      background-color: #db202f;
-      padding: 8px 16px;
-    }
-  
+.form-container {
+  padding: 2rem;
+  text-align: center;
+  border: dashed 1px #979797;
+  position: relative;
+  margin: 0 auto;
+  height: 200px;
+
+  input {
+    opacity: 0;
+    position: absolute;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
   }
-  
-  .fileover {
-    animation: shake 1s;
-    animation-iteration-count: infinite;
+
+  label {
+    color: white;
+    // width: auto;
+    // height: 10px;
+    border-radius: 10px;
+    background-color: #db202f;
+    padding: 8px 16px;
   }
-  
-  /* Shake animation */
-  @keyframes shake {
-    0% {
-      transform: translate(1px, 1px) rotate(0deg);
-    }
-  
-    10% {
-      transform: translate(-1px, -2px) rotate(-1deg);
-    }
-  
-    20% {
-      transform: translate(-3px, 0px) rotate(1deg);
-    }
-  
-    30% {
-      transform: translate(3px, 2px) rotate(0deg);
-    }
-  
-    40% {
-      transform: translate(1px, -1px) rotate(1deg);
-    }
-  
-    50% {
-      transform: translate(-1px, 2px) rotate(-1deg);
-    }
-  
-    60% {
-      transform: translate(-3px, 1px) rotate(0deg);
-    }
-  
-    70% {
-      transform: translate(3px, 1px) rotate(-1deg);
-    }
-  
-    80% {
-      transform: translate(-1px, -1px) rotate(1deg);
-    }
-  
-    90% {
-      transform: translate(1px, 2px) rotate(0deg);
-    }
-  
-    100% {
-      transform: translate(1px, -2px) rotate(-1deg);
-    }
+
+  .file-name {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+
+    -ms-word-break: break-all;
+    /* This is the dangerous one in WebKit, as it breaks things wherever */
+    word-break: break-all;
+    /* Instead use this non-standard one: */
+    word-break: break-word;
+
+    /* Adds a hyphen where the word breaks, if supported (No Blink) */
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
   }
+}
+
+.fileover {
+  animation: shake 1s;
+  animation-iteration-count: infinite;
+}
+
+/* Shake animation */
+@keyframes shake {
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
+}
